[package]
name = "tle5012"
version = "0.0.1"
categories = [
    "embedded",
    "hardware-support",
    "no-std",
]
authors = ["Boris Vinogradov <no111u3@gmail.com>"]
description = "TLE5012 GMR angle sensor driver"
edition = "2018"
keywords = ["embedded-hal-driver", "angle-sensor", "GMR"]
repository = "https://github.com/no111u3/tle5012"
readme = "README.md"
license = "Apache-2.0"

[dependencies]

[dependencies.embedded-hal]
version = "0.2.2"
features = ["unproven"]

[dev-dependencies.stm32f30x-hal]
version = "0.2.0"

[dev-dependencies.f3]
features = ["rt"]
version = "0.6.1"

[dev-dependencies]
cortex-m = "0.5.7"
cortex-m-rt = "0.6.5"
cortex-m-semihosting = "0.3.1"
panic-semihosting = "0.5.0"
serialio = "0.1.2"

[profile.dev]
incremental = false
codegen-units = 1

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
